src/app/globals.css
@import "tailwindcss";
/* @import url("normalise.css"); */

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-mono: var(--font-geist-mono);
  --font-main: var(--font-sequel-sans);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

/* * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
} */

body {
  /* cursor: none; */
  font-family: Arial, Helvetica, sans-serif;
}

.scrollbar-hide {
  -ms-overflow-style: none; /* Internet Explorer 10+ */
  scrollbar-width: none; /* Firefox */
}
.scrollbar-hide::-webkit-scrollbar {
  display: none; /* Safari and Chrome */
}

/* link hover animations */
.link-underline-anim {
  position: relative;
  text-decoration: none;
  display: inline-block;
}

.link-underline-anim::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: var(--underline-height, 1px);
  background-color: currentColor;
  transform: scaleX(0);
  transform-origin: right;
  transition: transform 0.2s ease;
}

.link-underline-anim:hover:before {
  transform: scaleX(1);
  transform-origin: left;
}

/* firefox wrong font weight fix */
@-moz-document url-prefix() {
  #content {
    outline: 1px solid #b9bdbe;
    outline-offset: -11px;
  }
}

